# pequeroku

./: .gitignore  AI.md  README.md  UPGRADING.md  create-image.md
sdk/: .gitignore  README.md  pyproject.toml
sdk/pequeroku/: __init__.py  client.py
sdk/tests/: test_sdk.py
source/mcp_service/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
source/mcp_service/pequeroku_mcp/: __init__.py  client.py  config.py  prompts.py  server.py
source/mcp_service/tests/: test_client.py
source/vm_service/: .env.template  .env.test  .gitignore  Dockerfile  README.md  entrypoint.sh  main.py  metrics.py  models.py  pyproject.toml  pytest.ini  security.py  settings.py  vms.py
source/vm_service/implementations/: __init__.py  bridge.py  listening_ports.py  preview_pool.py  preview_proxy.py  process.py  read_from_vm.py  runner.py  send_file.py  ssh_cache.py  ssh_pool.py  store.py
source/vm_service/middleware/: __init__.py  security.py
source/vm_service/models/: __init__.py  control.py  metrics.py  vms.py
source/vm_service/qemu_manager/: __init__.py  crypto.py  models.py  ports.py  qemu_args.py  seed.py  session.py  ssh_ready.py  vm.py
source/vm_service/routes/: __init__.py  metrics.py  vms.py
source/vm_service/scripts/: build-golden.sh  ensure-base-image.sh
source/vm_service/tests/: conftest.py  test_api.py  test_isolation_bug_repro.py  test_preview_proxy_stream.py  test_qemu_args.py  test_qemu_vm.py  test_read_from_vm.py  test_runner.py  test_seed.py  test_send_file.py  test_ssh_cache.py  test_ssh_pool.py  test_store.py
source/web_service/: .env.template  .gitignore  Dockerfile  README.md  celerybeat-schedule  conftest.py  entrypoint.sh  manage.py  namesgenerator.py  pyproject.toml  requirements.txt  schema.yml
source/web_service/ai_services/: ai_consumers.py  consumers.py  conversations.py  serializers.py  urls.py  utils.py  views.py
source/web_service/ai_services/agents/: __init__.py  agent.py  agents.py  models.py  schemas.py  tools.py  utils.py
source/web_service/ai_services/ai_engineer/: __init__.py  ai_engineer.py  tools.py
source/web_service/ai_services/ai_usecases/: generate_code.py
source/web_service/ai_services/gencode_scripts/: build_from_gencode.py
source/web_service/ai_services/minicode/: __init__.py  agent.py  config.py  context.py  custom_tools.py  events.py  llm.py  mcp.py  project.py  prompts.py  session.py  skills.py
source/web_service/ai_services/tests/: test_ai_consumer_fork.py  test_ai_consumer_history.py  test_ai_consumer_with_mocked_agent.py  test_ai_conversation_actions.py  test_ai_services.py  test_conversations.py  test_minicode.py  test_minicode_agent_errors.py  test_minicode_files.py  test_minicode_internet.py  test_minicode_llm.py  test_minicode_mcp.py  test_minicode_memory.py  test_minicode_pipeline.py  test_minicode_session.py  test_minicode_shell.py  test_minicode_skills_custom_tools.py  test_tools_order.py
source/web_service/ai_services/usecases/: generate_code.py
source/web_service/app/: tasks.py
source/web_service/base_image/: Dockerfile  docker  registries.conf
source/web_service/base_image/container_files/: docker-compose.yaml
source/web_service/docker_manager/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  session.py  signals.py  views.py
source/web_service/docker_manager/migrations/: 0002_resourcequota.py  0005_auditlog.py  0006_alter_auditlog_action.py  0007_resourcequota_ai_use_per_day_and_more.py  0008_filetemplate_public.py  0009_resourcequota_default_disk_gib.py  0010_container_disk_gib_container_memory_mb_and_more.py
source/web_service/docker_manager/usecases/: apply_template.py  audit.py  ssh.py  vm_management.py
source/web_service/internal_config/: admin.py  apps.py  audit.py  config_utils.py  models.py  signals.py
source/web_service/internal_config/migrations/: 0001_initial.py  0002_alter_auditlog_action.py  0003_aimemory.py  0004_aiusagelog_container.py  0005_alter_auditlog_action.py  0006_aiusagelog_completion_tokens_aiusagelog_model_used_and_more.py  0007_aimemory_current_conversation.py  0008_remove_aimemory_memory.py  0009_aiusagelog_total_tokens.py  0010_alter_aiusagelog_container.py
source/web_service/internal_config/tests/: test_ai_usage_log.py  test_audit.py
source/web_service/pequeroku/: asgi.py  celery.py  mixins.py  redis.py  routing.py  settings.py  settings_test.py  urls.py  wsgi.py
source/web_service/pequeroku/tests/: test_redis.py  test_ws_mixins.py
source/web_service/platform_api/: account_urls.py  account_views.py  admin.py  apps.py  auth.py  errors.py  idempotency.py  models.py  pagination.py  permissions.py  runs.py  runs_views.py  schema.py  serializers.py  throttling.py  urls.py  views.py  vmops.py
source/web_service/platform_api/migrations/: 0001_initial.py  0002_run.py
source/web_service/platform_api/tests/: conftest.py  test_account_api.py  test_auth_and_scopes.py  test_containers.py  test_idempotency_and_schema.py  test_reaper.py  test_runs.py  test_throttling.py
source/web_service/qemu_manager/: crypto.py  models.py  ports.py  proc.py  qemu_args.py  seed.py  session.py  ssh_ready.py  vm.py
source/web_service/vm_manager/: admin.py  apps.py  console_consumers.py  consumers.py  editor_consumers.py  mixin.py  models.py  orchestration.py  pool.py  preview_proxy.py  proxy_browser_utils.py  serializers.py  signals.py  templates.py  test_utils.py  urls.py  views.py  vm_client.py
source/web_service/vm_manager/migrations/: 0001_initial.py  0002_alter_container_base_image_and_more.py  0003_container_desired_state_node_arch_and_more.py  0004_container_resource_quota.py  0005_resourcequota_active.py  0006_team_teammembership.py  0007_containertype_remove_resourcequota_default_disk_gib_and_more.py  0008_containertype_private.py  0009_alter_containertype_private.py  0010_container_is_pool_containertype_pool_target_and_more.py  0011_warm_pool_defaults.py  0012_container_expires_at.py  0013_remove_container_base_image.py  (+3 more)
(+349 files in other folders)
