[tool.poetry]
name = "pequeroku"
version = "1.0.0"
description = "Python SDK for the PequeRoku platform API (/api/v1)"
authors = ["Hector Pulido <hectorandrespp@gmail.com>"]
readme = "README.md"
packages = [{ include = "pequeroku" }]

[tool.poetry.dependencies]
python = "^3.11"
httpx = ">=0.27,<1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
black = "^25.1.0"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
