[tool.poetry]
name = "mcp-service"
version = "1.0.0"
description = "PequeRoku MCP server — platform tools over the public /api/v1 surface"
authors = ["Hector Pulido <hectorandrespp@gmail.com>"]
readme = "README.md"
packages = [{ include = "pequeroku_mcp" }]

[tool.poetry.dependencies]
python = "^3.11"
mcp = "^1.2.0"
httpx = ">=0.27,<1.0"
uvicorn = { extras = ["standard"], version = "^0.35.0" }

[tool.poetry.scripts]
pequeroku-mcp = "pequeroku_mcp.server:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
black = "^25.1.0"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
