[tool.poetry]
name = "vm-services"
version = "0.1.0"
description = ""
authors = ["Hector Pulido <hectorandrespp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
fastapi = "^0.116.1"
paramiko = "^4.0.0"
redis = "^6.4.0"
dotenv = "^0.9.9"
psutil = "^7.0.0"

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]


[tool.poetry.group.dev.dependencies]
pyrefly = "^0.32.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
httpx = "^0.28.1"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--maxfail=10 -q --disable-warnings --cov=."
asyncio_mode = "auto"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
]
omit = [
    ""
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
