[tool.poetry]
name = "web-service"
version = "0.1.0"
description = ""
authors = ["Hector Pulido <hectorandrespp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = {extras = ["async"], version = "^5.2.6"}
djangorestframework = "^3.16.1"
drf-spectacular = "^0.28.0"
daphne = "^4.2.1"
channels = "^4.3.1"
psycopg2-binary = "^2.9.10"
requests = "^2.32.5"
dotenv = "^0.9.9"
websockets = "^15.0.1"
openai = "^1.107.0"
gunicorn = "^23.0.0"
uvicorn = "^0.35.0"
redis = "^6.4.0"
channels-redis = "^4.3.0"
ddgs = "^9.6.0"
newspaper3k = "^0.2.8"
lxml-html-clean = "^0.4.2"

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]


[tool.poetry.group.dev.dependencies]
pyrefly = "^0.32.0"
black = "^25.1.0"
pytest = "^8.3.0"
pytest-django = "^4.9.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pequeroku.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["vm_manager", "ai_services", "internal_config", "pequeroku"]
addopts = "--maxfail=10 -q --disable-warnings --cov=. --ds=pequeroku.settings_test"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["vm_manager", "ai_services", "internal_config", "pequeroku"]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
]
omit = [
    "conftest.py",
    "namesgenerator.py",
    "manage.py",
    "pequeroku/asgi.py",
    "pequeroku/wsgi.py",
    "*/urls.py",
    "test_*.py",
    "pequeroku/routing.py",
    "*/admin.py"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
